# Yeti2017

./: Process_to_set_Static_IP_address.txt  README.md
2017_C_Sharp_Commented_Code/yeti2017 - 1-28-2017 - Triple I FINAL/: StyleCop.Cache  Yeti2017.VC.db  Yeti2017.sln
2017_C_Sharp_Commented_Code/yeti2017 - 1-28-2017 - Triple I FINAL/DesktopApp/: DesktopApp.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  StyleCop.Cache  landmarks - Copy (2).txt  landmarks - Copy.txt  landmarks.txt  landmarks.txt.bak  landmarksTest.txt  navigation - Copy.txt  navigation.txt  navigationDay1 - 2016backup.txt  navigationDay1-1-28.txt  navigationDay1-test.txt  navigationDay1.txt  navigationDay2.txt  navigationQualification.txt  navigationTest.txt  navigationTripleIFinal.txt
2017_C_Sharp_Commented_Code/yeti2017 - 1-28-2017 - Triple I FINAL/ModelingProject1/: ModelingProject1.modelproj
2017_C_Sharp_Commented_Code/yeti2017 - 1-28-2017 - Triple I FINAL/RobotService/: Buffer.cs  CVAR.cs  Control.cs  ExtensionMethods.cs  LinearEquation.cs  Localization.cs  LocationPoint.cs  NavigationAid.cs  Obstacle.cs  Program.cs  RobotService.csproj  StyleCop.Cache  intersectBucket.cs  target.cs
examples/test_package/: CMakeLists.txt  package.xml
examples/test_package/src/: listener.cpp  (+1 more)
obstacle_detector/: CMakeLists.txt  README.md  package.xml
obstacle_detector/msg/: Obstacles.msg  SegmentObstacle.msg
obstacle_detector/src/: obstacle_detection_node.cpp  obstacle_detection_node.h
yeti_snowplow/: CMakeLists.txt  package.xml
yeti_snowplow/bagfiles/: Lidar_test.bag  SingleITestRun3.bag
yeti_snowplow/data/: landmark_locations_Qualification.txt  landmark_locations_Single_I.txt  landmark_locations_Triple_I.txt
yeti_snowplow/launch/: localization_test.launch  roboteq_test.launch  start_yeti.launch  waypoint_test.launch
yeti_snowplow/msg/: joystick.msg  location_point.msg  obstacle.msg  obstacle_position.msg  robot_position.msg
yeti_snowplow/src/: drive_mode_control.cpp  joystick.cpp  localization_node.cpp  manual_control.cpp  navigation_pid.cpp  obstacle_detection.cpp  obstacle_reaction.cpp  roboteq.cpp  scan_to_xy_node.cpp  waypoint_selection.cpp
yeti_snowplow/srv/: waypoint.srv
(+24 files in other folders)
