<?xml version="1.0"?>
<package>
  <name>obstacle_detector</name>
  <version>0.0.0</version>
  <description>The obstacle_detector package</description>
  <maintainer email="chris.smalley.32@gmail.com">chris</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <!--   <test_depend>gtest</test_depend> -->
  <export>

  </export>
</package>
